fix Java 8 compilation